compressed images further fixed full image location editted approx time editted margins added material sections with buttons and animations added js to support transitions fixed bluetooth spelling bolded audio arch fixed some spacing on hr adjusted pricing section slightly made clicking these buttons closer added quotes for Send Message

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,29 +25,10 @@ section, summary, time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;}
 
-	.collapsible {
-	  background-color: #777;
-	  color: white;
-	  cursor: pointer;
-	  padding: 18px;
-	  width: 100%;
-	  border: none;
-	  text-align: left;
-	  outline: none;
-	  font-size: 15px;
-	}
-
-	.active, .collapsible:hover {
-	  background-color: #555;
-	}
-
-	.inside {
-	  padding: 0 18px;
-	  max-height: 0;
-	  overflow: hidden;
-	  transition: max-height 0.2s ease-out;
-	  background-color: #f1f1f1;
-	}
+.collapse{
+	transition: opacity 0.5s ease-in-out;
+	overflow: hidden;
+}
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
